--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   <div id="main">	
     <div id="site_content">  
       <div id="header">  
-        <span style="float:left;"><img src="images/logo1.jpg" width="160" height="120"/></span>
+        <span style="float:left;"><img src="images/logo1.jpg" width="130" height="120"/></span>
 				    <div style="float:left; font-size:24px; padding:18px; color:white; font-weight:bold; margin-left:50px;"><center>DO THINGS WITH PASSION OR NOT ALL<br>
 					<span style="font-size:18px; color:#00A7EF; font-style:italic; font-family:Georgia">Lavin Indo Sports Society</span></center></div>
 		<span style="float:right; padding-right:40px;"><img src="images/logo2.png" width="160" height="120"/></span>	
@@ -62,7 +62,7 @@ We are a new think in the sports accomplishments and provide a various range of 
 <br>
 
 We also organize the camps in the schools and specially focused on the girls for the self-defense classes and for the boys we help them to get the selection in the YBC (YOUNG BOYS COMPANY) in the various battalions of Army in the selection based on Sports Quota, we also help the students to play for India in the International Championships of various games.
-<br>We establish this trust for all those incredible children those have outstanding caliber, potential, dedication and strength but can’t show their inner abilities so, I trust that coaching and training provided by our Mentor instructors is both informative, interesting and conveys the excitement, pride and vision for future prospects. <br />A team of passionate, highly committed professionals, working together in an integrated manner, deliver the core elements of our Specialist Sports program. It is exciting to see the collaborative efforts of teachers, parents, coaches, mentors, fitness professionals, performance analysts, physiotherapists and sports psychologists all contributing to assist young people achieve their goals in school, sports and life.  
+<br>We establish this trust for all those incredible children those have outstanding caliber, potential, dedication and strength but can't show their inner abilities so, I trust that coaching and training provided by our Mentor instructors is both informative, interesting and conveys the excitement, pride and vision for future prospects. <br />A team of passionate, highly committed professionals, working together in an integrated manner, deliver the core elements of our Specialist Sports program. It is exciting to see the collaborative efforts of teachers, parents, coaches, mentors, fitness professionals, performance analysts, physiotherapists and sports psychologists all contributing to assist young people achieve their goals in school, sports and life.  
 This is a registered program to be run in the schools, Colleges and Societies with in a focus module for the best outcomes of the students, Professionals and anybody else for the best improvement of their skills etc.<br />
 <!--Lavin Indo Sports Society is a sports program seeks to prepare students to become productive citizens of our community and society by teaching and developing commitment, character, and a competitive spirit among student-sports activities who learn to honor the game. Coaches are committed to promoting skills development, team play, and sportsmanship at all levels.
 
@@ -78,7 +78,7 @@ Director<br />
 Lavin Indo Sports Program
 </h3></div>
 <br />
- <h1>About Councellor</h1>
+ <h1>Counsellor Message</h1>
 		  <div style="float:left; border:0px solid red; margin-top:10px;">
 		  	<div style="float:left; border:0px solid red; width:280px;"><img src="images/d2.jpg" height="200"/></div>
           <p>Mr. Gaurav is our best Guru and now a full fledged	 		and full time trainer  to train students in discipline 			and he is also a very well known YOGA instructor 			who also helps in curing many diseases with the 			help of correct posture of Yoga Asanas.
@@ -136,7 +136,7 @@ He is also a well known master in Meditation and Concentration builder, helps on
 	  <div id="footer_content">
         Director : Mr. Ashwani Sharma &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Black Belt 3rd DAN (Taekwondo)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International Player<b><br>
 		Contact :  Email: lavinindosports@gmail.com Mobile No.         +91-98-13-04-8002
-			                                +91-99-96-66-4147
+			                               +91-7211114000
       </div><!--close footer_content-->	
     </div><!--close footer-->	
   </div><!--close main-->	
