--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   <div id="main">	
     <div id="site_content">  
      <div id="header">  
-        <span style="float:left;"><img src="images/logo1.jpg" width="160" height="120"/></span>
+        <span style="float:left;"><img src="images/logo1.jpg" width="130" height="120"/></span>
 				    <div style="float:left; font-size:24px; padding:18px; color:white; font-weight:bold; margin-left:50px;"><center>DO THINGS WITH PASSION OR NOT ALL<br>
 					<span style="font-size:18px; color:#00A7EF; font-style:italic; font-family:Georgia">Lavin Indo Sports Society</span></center></div>
 		<span style="float:right; padding-right:40px;"><img src="images/logo2.png" width="160" height="120"/></span>	
@@ -55,13 +55,10 @@
 		
         <div class="content_item">
 		<h1> Regd. Office </h1>
-Gali no. 3, Ward no. 5, Jaurassi Road, Samalkha, Panipat , Haryana – 132101
+Gali no. 3, Ward no. 5, Jaurassi Road, Samalkha, Panipat , Haryana 132101
 <h1>Branch Office</h1>
 No. 294, Type II, CRPF Camp, Chiloda Road, Gandhinagar, Gujarat.<br />
-<h2>Director</h2> 				   	  
-<b>Mr. Ashwani Sharma </b><br />	                                 
-Black Belt 3rd DAN (Taekwondo)  <br />                     	
-International Player			 
+		 
 <br /><br />
           <h2>Contact Us</h2>
 		  <form action="mailto:lavinindosports@gmail.com" method="post">
@@ -85,6 +82,8 @@ International Player
 			  <h1>Contact</h1>
  Email: lavinindosports@gmail.com<br />
   Mobile No.   +91-98-13-04-8002<br />
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  +91-7211114000<br>
   				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				 +91-99-96-66-4147
                 
@@ -98,7 +97,7 @@ International Player
 	  <div id="footer_content">
         Director : Mr. Ashwani Sharma &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Black Belt 3rd DAN (Taekwondo)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International Player<b><br>
 		Contact :  Email: lavinindosports@gmail.com Mobile No.         +91-98-13-04-8002
-			                                +91-99-96-66-4147
+			                                +91-7211114000
       </div><!--close footer_content-->	
     </div><!--close footer-->	
   </div><!--close main-->	
