--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
-  <title>ARaynorDesign Template</title>
+  <title>LAVIN INDO SPORTS</title>
   <meta name="description" content="free website template" />
   <meta name="keywords" content="enter your keywords here" />
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
@@ -42,7 +42,7 @@ font: normal 100% arial, sans-serif;
   <div id="main">	
     <div id="site_content">  
       <div id="header">  
-        <span style="float:left;"><img src="images/logo1.jpg" width="160" height="120"/></span>
+        <span style="float:left;"><img src="images/logo1.jpg" width="130" height="120"/></span>
 				    <div style="float:left; font-size:24px; padding:18px; color:white; font-weight:bold; margin-left:50px;"><center>DO THINGS WITH PASSION OR NOT ALL<br>
 					<span style="font-size:18px; color:#00A7EF; font-style:italic; font-family:Georgia">Lavin Indo Sports Society</span></center></div>
 		<span style="float:right; padding-right:40px;"><img src="images/logo2.png" width="160" height="120"/></span>	
@@ -200,7 +200,7 @@ font: normal 100% arial, sans-serif;
 	  <div id="footer_content">
         Director : Mr. Ashwani Sharma &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Black Belt 3rd DAN (Taekwondo)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International Player<b><br>
 		Contact :  Email: lavinindosports@gmail.com Mobile No.         +91-98-13-04-8002
-			                                +91-99-96-66-4147
+			                               +91-7211114000
       </div><!--close footer_content-->	
     </div><!--close footer-->	
   </div><!--close main-->	
