--- a/games.html
+++ b/games.html
@@ -31,7 +31,7 @@
   <div id="main">	
     <div id="site_content">  
       <div id="header">  
-        <span style="float:left;"><img src="images/logo1.jpg" width="160" height="120"/></span>
+        <span style="float:left;"><img src="images/logo1.jpg" width="130" height="120"/></span>
 				    <div style="float:left; font-size:24px; padding:18px; color:white; font-weight:bold; margin-left:50px;"><center>DO THINGS WITH PASSION OR NOT ALL<br>
 					<span style="font-size:18px; color:#00A7EF; font-style:italic; font-family:Georgia">Lavin Indo Sports Society</span></center></div>
 		<span style="float:right; padding-right:40px;"><img src="images/logo2.png" width="160" height="120"/></span>	
@@ -40,8 +40,8 @@
         <ul class="lavaLampWithImage" id="lava_menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li  class="current"><a href="vision.html">Vision</a></li>
-		   <li><a href="games.html">Games</a></li>
+          <li><a href="vision.html">Vision</a></li>
+		   <li  class="current"><a href="games.html">Games</a></li>
           <li><a href="plan.html">Strategic Plan</a></li>
 		  <li><a href="gallery.html">Gallery</a></li>
           <li><a href="contact.html">Contact Us</a></li>
@@ -97,7 +97,7 @@ Karate is  a Japanese game.Shotokan Karate is a way for an individual to realize
          
 		  <p>Shooting made its Olympic debut at the Games of the I Olympiad in Athens in 1896. It was then staged at most editions of the Games, with the 
 		  exception of the Games in St Louis in 1904 and Amsterdam 1928. Women made their shooting debut at the Games of the XIX Olympiad in Mexico City in 
-		  1968, competing in men’s events. The first purely women’s events appeared in 1984, and it was only in 1996 that the men’s and women’s
+		  1968, competing in men's events. The first purely women's events appeared in 1984, and it was only in 1996 that the men's and women's
 		  programmes were completely separated.A shooting sport is a competitive sport involving tests of proficiency (accuracy and speed) using various 
 		  types of guns, such as firearms and airguns. Shooting sports are categorized by the type of firearm, target, and distance at which the targets 
 		  are shot.This is the 10mtr air rifle and 10mtr air pistol game.</p><br>
@@ -115,7 +115,7 @@ Karate is  a Japanese game.Shotokan Karate is a way for an individual to realize
 	  <div id="footer_content">
         Director : Mr. Ashwani Sharma &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Black Belt 3rd DAN (Taekwondo)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International Player<b><br>
 		Contact :  Email: lavinindosports@gmail.com Mobile No.         +91-98-13-04-8002
-			                                +91-99-96-66-4147
+			                               +91-7211114000
       </div><!--close footer_content-->	
     </div><!--close footer-->	
   </div><!--close main-->	
