--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,8 @@ No. 294, Type II, CRPF Camp, Chiloda Road, Gandhinagar, Gujarat.<br />
 	      <div style="width:430px; float:right;"><p><input class="contact" type="text" name="your_name" value="" /></p></div>
           <div style="width:170px; float:left;"><p>Email Address</p></div>
 		  <div style="width:430px; float:right;"><p><input class="contact" type="text" name="your_email" value="" /></p></div>
+		  <div style="width:170px; float:left;"><p>Contact No.</p></div>
+		  <div style="width:430px; float:right;"><p><input class="contact" type="text" name="your_contact" value="" /></p></div>
           <div style="width:170px; float:left;"><p>Message</p></div>
 	      <div style="width:430px; float:right;"><p><textarea class="contact textarea" rows="8" cols="50" name="your_message"></textarea></p></div>
           <br style="clear:both;" />
@@ -83,7 +85,7 @@ No. 294, Type II, CRPF Camp, Chiloda Road, Gandhinagar, Gujarat.<br />
  Email: lavinindosports@gmail.com<br />
   Mobile No.   +91-98-13-04-8002<br />
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  +91-7211114000<br>
+  +91-72-11-11-4000<br>
   				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				 +91-99-96-66-4147
                 
@@ -97,7 +99,7 @@ No. 294, Type II, CRPF Camp, Chiloda Road, Gandhinagar, Gujarat.<br />
 	  <div id="footer_content">
         Director : Mr. Ashwani Sharma &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Black Belt 3rd DAN (Taekwondo)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International Player<b><br>
 		Contact :  Email: lavinindosports@gmail.com Mobile No.         +91-98-13-04-8002
-			                                +91-7211114000
+			                               +91-72-11-11-4000
       </div><!--close footer_content-->	
     </div><!--close footer-->	
   </div><!--close main-->	
