--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@
 	  </div><!--close banner_image-->		  
       <div id="content">
         <div class="content_item">
-          <h1>Director's Message</h1>
+          <h1>President Message</h1>
 		  <span style="color:#C1C1C1; font-weight:bold">Welcome to LAVIN INDO SPORTS (A Sports  and Activity Program) This sports Program empowers me to live with honor, engage my passion, act with humility, and delight in wisdom.</span>
 		  <div style="float:left; border:0px solid red; margin-top:10px;">
-		  	<div style="float:left; border:0px solid red; width:300px;"><img src="images/d1.jpg" height="250"/></div>
+		  	<div style="float:left; border:0px solid red; width:310px;"><img src="images/d1.jpg" height="290" width="300"/></div>
           <p>This is the Sports pivot provides a wide range of sports specially deals in various sports undertakings. 	Our main focus is to give a reliable face of sports and sportsperson to the society. We deals in TAEKWONDO, KARATE, MMA (MIXED MARTIAL ARTS), SKATING, SHOOTING, JUDO, MUAY THAI, KICK BOXING, WUSHU, JEET KUNE DO etc.
 We deals with the schools, colleges, Institutions and various training centers and provides the coaches/Mentors/Instructors etc for the selected various respective games in the said scenario.
 We are a new think in the sports accomplishments and provide a various range of outcomes in the field of Martial Arts and other games too.<br>
@@ -136,7 +136,7 @@ He is also a well known master in Meditation and Concentration builder, helps on
 	  <div id="footer_content">
         Director : Mr. Ashwani Sharma &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Black Belt 3rd DAN (Taekwondo)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;International Player<b><br>
 		Contact :  Email: lavinindosports@gmail.com Mobile No.         +91-98-13-04-8002
-			                               +91-7211114000
+			                               +91-72-11-11-4000
       </div><!--close footer_content-->	
     </div><!--close footer-->	
   </div><!--close main-->	
