--- a/plan.html
+++ b/plan.html
@@ -58,9 +58,9 @@
 		 <li>1 week project or 15 days camp or 1 month workshop?</li><br />
 		 <li>2nd to 7th and 8th to 12th class project.</li><br />
 		 <li>Summer or Winter camps?</li><br />
-		 <li>Analyzing for judging one’s own skills?</li><br />
+		 <li>Analyzing for judging one's own skills?</li><br />
 		 <li>Flexible plans with static terms and conditions.</li><br />
-		 <li>School’s advertisement?</li><br />
+		 <li>School's advertisement?</li><br />
 		 <li>School Demonstration?</li><br />
 		 <li>Last day Function performance.</li><br />
 		 </ol>
