--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@ No. 294, Type II, CRPF Camp, Chiloda Road, Gandhinagar, Gujarat.<br />
 		 
 <br /><br />
           <h2>Contact Us</h2>
-		  <form action="mailto:lavinindosports@gmail.com" method="post">
+		  <form action="mailto:lavinindosports@gmail.com" method="post" encrypt="text/plain">
           <div style="width:170px; float:left;"><p>Name</p></div>
 	      <div style="width:430px; float:right;"><p><input class="contact" type="text" name="your_name" value="" /></p></div>
           <div style="width:170px; float:left;"><p>Email Address</p></div>
