--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@ Lavin Indo Sports Program
  <h1>Counsellor Message</h1>
 		  <div style="float:left; border:0px solid red; margin-top:10px;">
 		  	<div style="float:left; border:0px solid red; width:280px;"><img src="images/d2.jpg" height="200"/></div>
-          <p>Mr. Gaurav is our best Guru and now a full fledged	 		and full time trainer  to train students in discipline 			and he is also a very well known YOGA instructor 			who also helps in curing many diseases with the 			help of correct posture of Yoga Asanas.
+          <p>Mr. Gaurav is our best Guru and now a full fledged	 		and full time trainer  to train students in discipline 			and he is also a very well known YOGA Instructor 			who also helps in curing many diseases with the 			help of correct posture of Yoga Asanas.
 
 He stimulates every critical situation in a manner so that everyone may catch and sustain in the yoga for the development of personality and many other aspects of life, to build the students self analyzer and self dependent and full energetic with outstanding confidence. 
 
@@ -123,8 +123,8 @@ He is also a well known master in Meditation and Concentration builder, helps on
 			<img src="images/o8.jpg" height="150" /></span>
 			<span><h4>Kho-Kho</h4>
 			<img src="images/o9.jpg" height="150" /></span>
-			<span><h4>English Speaking</h4>
-			<img src="images/o2.jpg" height="90" /></span>
+			<!--<span><h4>English Speaking</h4>
+			<img src="images/o2.jpg" height="90" /></span>-->
 			
 			</div>
 			</div>
