--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
           <h1>Welcome to LAVIN INDO SPORTS</h1>
           <p>This is the Sports pivot provides a wide range of sports specially deals in various sports undertakings. 
 		  Our main focus is to give a reliable face of sports and sportsperson to the society. We deals in TAEKWONDO, KARATE, MMA (MIXED MARTIAL ARTS),
-		  SKATING, SHOOTING, JUDO, MUAY THAI, KICK BOXING, WUSHU, JEET KUNE DO etc....   <a href="about.html">read more</a></p>
-           <div style="width:320px; float:left; padding: 0px 6px 10px 0px;" ><h3>JODO</h3>
+		  SKATING, SHOOTING, WUSHU, JEET KUNE DO etc....   <a href="about.html">read more</a></p><br>
+       <!--    <div style="width:320px; float:left; padding: 0px 6px 10px 0px;" ><h3>JODO</h3>
          <img alt="image" src="images/judo.jpg" width="300" />
           <p>Judo is a sport of unarmed combat derived from ju-jitsu and intended to train the body and mind.  </p>
-		  <a href="games.html">Read More</a></div>
-		  <div style="width:320px; float:left; padding: 0px 6px 10px 20px;">
+		  <a href="games.html">Read More</a></div>-->
+		  <div style="width:320px; float:left; padding: 0px 6px 10px 0px;">
 		  <h3>TAEKWONDO</h3>
           <img alt="image" src="images/tk.jpg" width="300"/>
           <p>The name Taekwondo is derived from the Korean word "Tae" meaning foot,"Kwon" meaning fist and "Do" meaning way of. </p>
 		  <a href="games.html">Read More</a></div>
 		 
 		  
-		     <div style="width:320px; float:left; padding: 0px 6px 10px 0px;"><h3>MUAY THAI</h3>
+		   <!--  <div style="width:320px; float:left; padding: 0px 6px 10px 0px;"><h3>MUAY THAI</h3>
          <img alt="image" src="images/muay.jpg" width="300" />
           <p>This physical and mental discipline which includes combat on shins is known as "the art of eight limbs". </p>
-		  <a href="games.html">Read More</a></div>
+		  <a href="games.html">Read More</a></div>-->
 		  <div style="width:320px; float:left; padding: 0px 6px 10px 20px;">
 		  <h3>KARATE</h3>
           <img alt="image" src="images/krate.jpg" width="300"/>
@@ -93,13 +93,11 @@
 			<br /><br />
 			<a href="LAVIN REG. FORM.docx"><h4 style="background-color:#FFFFFF;">Download Registration Form</h4></a>
                 <h2>Latest Games</h2>
-			    <h4>1. JUDO<br>
+			    <h4>1. SKATING<br>
 					2. KARATE<br>
 					3. TAEKWONDO<br>
-					4. MUAY THAI<br>
-					5. SHOOTING<br>
-					6. KICKBOXING<br>
-					7. SKATING</h4>
+					4. SHOOTING<br>
+				</h4>
                 <p></p>
 		          <a href="games.html">Read more</a>
               </div><!--close sidebar_item--> 
